# frank

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  build-osx.sh  build-win.bat  build.sh  code-coverage.sh  coverage.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: LinuxBuild.yml  WindowsBuildCI.yml  codeql-analysis.yml
coverage-reports/20200811-134100/all-merged/coverage/Users/francoisgenolini/Projects/frank/video/: video_main.cpp.html
coverage-reports/20200811-134100/all-merged/coverage/Users/francoisgenolini/Projects/frank/video/json/: persisted_settings.cpp.html
coverage-reports/20200811-134100/all-merged/coverage/Users/francoisgenolini/Projects/frank/video/opencv/: opencv_window.cpp.html  paint_picture.cpp.html  take_picture.cpp.html
coverage-reports/20200811-134100/all-merged/coverage/Users/francoisgenolini/Projects/frank/video/test/: test_main_2.cpp.html  test_run_ui_3.cpp.html  test_video_gui_1.cpp.html  testable_exit.cpp.html
coverage-reports/20200811-134100/all-merged/coverage/Users/francoisgenolini/Projects/frank/video/ui/: other_window.cpp.html  run_ui.cpp.html
docs/: Gemfile  _config.yml  index.md
docs/_posts/: 2020-07-19-frank-video-4-webcams.md  2020-07-19-welcome-to-jekyll.markdown  2020-07-30-frank-video-overlay-hist.md
docs/coverage-reports/20200811-134100/all-merged/: index.html
docs/coverage-reports/20200811-134100/all-merged/coverage/Users/francoisgenolini/Projects/frank/video/: run_application.cpp.html
docs/coverage-reports/20200811-144600/: index.html
docs/coverage-reports/20200811-144600/coverage/Users/francoisgenolini/Projects/frank/video/: run_application.cpp.html  video_main.cpp.html
docs/coverage-reports/20200811-144600/coverage/Users/francoisgenolini/Projects/frank/video/device/: device_register.h.html  input_device.cpp.html  list_devices.cpp.html  macos_list_devices.cpp.html
docs/coverage-reports/20200811-144600/coverage/Users/francoisgenolini/Projects/frank/video/file/: file_dialogs.cpp.html
docs/coverage-reports/20200811-144600/coverage/Users/francoisgenolini/Projects/frank/video/json/: persisted_settings.cpp.html
docs/coverage-reports/20200811-144600/coverage/Users/francoisgenolini/Projects/frank/video/opencv/: add_overlay.cpp.html  exit_requested.cpp.html  opencv_window.cpp.html  paint_histogram.cpp.html  paint_picture.cpp.html  take_picture.cpp.html
docs/coverage-reports/20200811-144600/coverage/Users/francoisgenolini/Projects/frank/video/test/: test_list_devices.cpp.html  test_main_2.cpp.html  test_run_application_2.cpp.html  test_run_ui_3.cpp.html  test_video_gui_1.cpp.html  testable_exit.cpp.html
docs/coverage-reports/20200811-171700/: index.html
docs/coverage-reports/20200811-171700/coverage/Users/francoisgenolini/Projects/frank/video/: run_application.cpp.html  video_main.cpp.html
docs/coverage-reports/20200811-211900/: index.html
docs/coverage-reports/20200811-211900/coverage/Users/francoisgenolini/Projects/frank/video/: run_application.cpp.html  video_main.cpp.html
scripts/: build_support.sh  dependencies-osx.sh  dependencies.sh
video/: .list_devices.cpp.swp  CMakeLists.txt  License.txt  application.cpp  application.h  avfoundation_list.swift  config.h.in  exit_requested.cpp  exit_requested.h  input_device.cpp  input_device.h  linux_list_devices.cpp  linux_list_devices.h  list_devices.cpp  list_devices.h  macos_list_devices.cpp  macos_list_devices.h  main_window.cpp  main_window.h  opencv_ui.cpp  opencv_ui.h  opencv_window.cpp  opencv_window.h  other_window.cpp  other_window.h  run_application.cpp  run_application.h  run_tests.cpp  run_tests.h  sources.cmake  take_picture.h  version.cmake  videoConfig.h.in  video_main.cpp  video_test_main.cpp  video_winmain.cpp  win32_list_devices.cpp  win32_list_devices.h
video/check/: sanitiser.cmake  tidy.cmake
video/device/: device_register.h  input_device.cpp  input_device.h  linux_list_devices.cpp  linux_list_devices.h  list_devices.cpp  list_devices.h  macos_list_devices.cpp  macos_list_devices.h  video_devices.cpp  video_devices.h  win32_list_devices.cpp  win32_list_devices.h
video/exception/: exceptions.cpp  exceptions.h  exceptions_handler.cpp  exceptions_handler.h  handler.cpp  handler.h
video/file/: file_dialogs.cpp  file_dialogs.h
video/install/: all_installers.cmake
video/json/: persisted_settings.cpp  persisted_settings.h
video/opencv/: add_overlay.cpp  add_overlay.h  exit_requested.cpp  exit_requested.h  open_webcam.cpp  open_webcam.h  opencv_window.cpp  opencv_window.h  paint_histogram.cpp  paint_histogram.h  paint_picture.cpp  paint_picture.h  reduce_resolution.cpp  reduce_resolution.h  take_picture.cpp  take_picture.h
video/test/: all_tests.cmake  catch_implementation.cpp  code-coverage.cmake  do_nothing_cstdio.h  do_nothing_exit.h  fake_file_dialogs.h  test_exceptions_handler.cpp  test_list_devices.cpp  test_main_2.cpp  test_main_settings_window_draw_4.cpp  test_open_file_3.cpp  test_opencv_ui_1.cpp  test_run_application_2.cpp  test_run_ui_3.cpp  test_video_gui_1.cpp  test_winmain_4.cpp  testable_cstdio.cpp  testable_cstdio.h  testable_exit.cpp  testable_exit.h
video/ui/: application_state.cpp  application_state.h  button_command.cpp  button_command.h  checkbox_command.cpp  checkbox_command.h  cvui_init.cpp  cvui_init.h  layout_command.cpp  layout_command.h  main_settings_window.cpp  main_settings_window.h  main_settings_window_constructor.cpp  main_settings_window_draw.cpp  main_settings_window_draw_canny.cpp  main_settings_window_draw_overlay.cpp  main_settings_window_draw_webcam.cpp  main_window.cpp  main_window.h  opencv_ui.cpp  opencv_ui.h  other_window.cpp  other_window.h  protected_cvui.h  run_ui.cpp  run_ui.h  statistics_window.cpp  statistics_window.h  text_command.cpp  text_command.h  trackbar_double_command.cpp  trackbar_double_command.h  trackbar_int_command.cpp  trackbar_int_command.h  ui.cpp  ui.h  ui_controls.cpp  ui_controls.h  user_interface.h  video_gui.cpp  (+4 more)
(+69 files in other folders)
